# excel-parser-mcp

./: README_CN.md
excel-parser-mcp/: README.md  README_CN.md  mcp_server.py  pyproject.toml
excel-parser-mcp/excel_parser/: __init__.py  reader.py  text_converter.py  value_normalizer.py
